[tool.poetry]
name = "sexypy"
version = "0.1.9"
description = "Python with S-expression Grammar"
authors = ["Jethack"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
hy = "0.25"
hyrule = "0.2.1"
toolz = "^0.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
