[tool.poetry]
name = "sexypy"
version = "0.3.0"
description = "Python with S-expression Grammar"
authors = ["Jethack"]
readme = "README.md"
packages = [
    {include = "sxpy", from = "src"}
]

[tool.poetry.dependencies]
python = "~3.11"

[tool.poetry.scripts]
spy = "sxpy:run"
s2py = "sxpy:transcompile"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
